# btc-collateral

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config.yaml  makefile  rustfmt.toml
.bitcoin/: bitcoin.conf
.bitcoin/regtest/blocks/index/: 000200.ldb  MANIFEST-000197
.bitcoin/regtest/chainstate/: 000262.ldb  000264.ldb  MANIFEST-000266
.bitcoin/regtest/indexes/txindex/: 000187.ldb  000189.ldb  MANIFEST-000188
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
migrations/: 20240302002826_initial_tables.up.sql
scripts/: init_db.sh
src/: config.rs  constants.rs  lib.rs  main.rs  startup.rs
src/common/meta/: user.rs
src/domain/: funding_transaction.rs  generate_address.rs  mod.rs  redeeming_transaction.rs  sign_psbt.rs
src/routes/: health_check.rs
src/service/: mod.rs  user_service.rs  wallet_service.rs
src/utils/: api_result.rs  bitcoind_rpc.rs  get_feerate.rs  mod.rs  password.rs  test_node.rs  transaction_utils.rs  validate_address.rs  validate_publickeys.rs
tests/: health_check.rs  test_node.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
