[package]
name = "btc_collateral"
description = "Collaborative custody service for bitcoin collateralized loans"
version = "0.1.0"
edition = "2021"
keywords = ["bitcoin", "collateral", "btc", "rust"]
repository = "https://github.com/tvpeter/btc-collateral/"
license = "LICENSE.txt"
categories = ["asynchronous", "api-bindings", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
bitcoin = {version = "0.31.0", features = ["rand-std"]}
config = "0.13.4"
bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
serde = {version = "1.0.193", features = ["derive"]}
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
round = "0.1.2"
reqwest = { version = "0.11", features = ["json"] }

