[workspace.package]
description = "Collaborative custody service for bitcoin collateralized loans"
version = "0.1.0"
edition = "2021"
keywords = ["bitcoin", "collateral", "btc", "rust", "wallet"]
repository = "https://github.com/tvpeter/btc-collateral/"
license = "LICENSE.txt"
categories = ["asynchronous", "api-bindings", "web-programming::http-server"]

[package]
name = "btc_collateral"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = ["wallet"]

[workspace.dependencies]
actix-web = "4.4.1"
bitcoin = {version = "0.31.0", features = ["rand-std"]}
config = "0.13.4"
bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
serde = {version = "1.0.193", features = ["derive"]}
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
round = "0.1.2"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.79"
bdk = {version = "0.29.0", features = ["all-keys", "sqlite"]}

[dependencies]
actix-web = { workspace = true }
bitcoin = { workspace = true }
config = { workspace = true }
bitcoincore-rpc = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
round = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
bdk = { workspace = true }
base64 ="0.21.7"

wallet = { path = "./wallet" }
serde_json = "1.0.108"
