[workspace.package]
description = "Collaborative custody service for bitcoin collateralized loans"
version = "0.1.0"
edition = "2021"
keywords = ["bitcoin", "collateral", "btc", "rust", "wallet"]
repository = "https://github.com/tvpeter/btc-collateral/"
license = "LICENSE.txt"
categories = ["asynchronous", "api-bindings", "web-programming::http-server"]

[package]
name = "btc_collateral"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = ["wallet"]

[workspace.dependencies]
actix-web = "4.4.1"
bitcoin = {version = "0.31.0", features = ["rand-std"]}
config = "0.13.4"
bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
serde = {version = "1.0.193", features = ["derive"]}
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
round = "0.1.2"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.79"
bdk = {version = "0.29.0", features = ["all-keys", "sqlite"]}

[dependencies]
actix-web = { workspace = true }
bitcoin = { workspace = true }
config = { workspace = true }
bitcoincore-rpc = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
round = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
bdk = { workspace = true }
base64 ="0.21.7"

wallet = { path = "./wallet" }
serde_json = "1.0.108"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde_urlencoded = "0.7.1"
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.10.3"
once_cell = "1.19.0"
sql_query_builder = { version = "2.1.0", features = ["postgresql"] }
lettre = "0.11.4"
env_logger = "0.11.3"
secrecy = { version = "0.8", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }

