[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
description= "Wallet"
license="License.txt"
keywords= ["wallet", "bitcoin", "bdk"]
categories= ["asynchronous"]
readme= "../README.md"
repository = "https://github.com/tvpeter/btc-collateral/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bdk = {version = "0.29.0", features = ["all-keys", "sqlite"]}
dotenv = { workspace = true }
